--- a/templates/index.html
+++ b/templates/index.html
@@ -4,9 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Youtube Likes Predictor</title>
 </head>
+
 <body>
     <h1>{{context}}</h1>
+    <button class="button">
+       <h2>Submit</h2> 
+    </button>
+    
+    <textarea name="" id="" cols="30" rows="10"></textarea>
+
+    <form action="/post_field" method="post">
+        <input type="hidden" name="this_name" value="value1" />
+        <input type="submit" value="Press Me!"/>
+    </form>
+
 </body>
 </html>
